# SimpleLogPackage

./: .gitignore  CMakeLists.txt  GTGeneralLogSystem.cc  GTGeneralLogSystem.h  README.md  genDynamicLib.sh  genStaticLib.sh  main.cpp
lib/: libGTGeneralLogSys.dylib
